--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ See the end for copying conditions.
 ** libgnutls: Fixes when session tickets and session DB are used.
 Report and initial patch by Stefan Buehler.
 
+** libgnutls: Added the RSA-PSK key exchange. Patch by by Frank Morgner,
+based on previous patch by Bardenheuer GmbH and Bundesdruckerei GmbH.
+
 ** libgnutls: Added ciphersuites that use ARCFOUR with ECDHE. Patch
 by Stefan Buehler.
 
