--- a/NEWS
+++ b/NEWS
@@ -2,10 +2,16 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.0.31 (unreleased)
+* Version 3.0.32 (released 2013-08-31)
 
 ** libgnutls: Fixes when session tickets and session DB are used.
 Report and initial patch by Stefan Buehler.
+
+** API and ABI modifications:
+No changes since last version.
+
+
+* Version 3.0.31 (released 2013-07-12)
 
 ** libgnutls: Ensure that gnutls_dtls_set_mtu() cannot exceed the
 maximum allowed DTLS size.
