exported gnutls_record_set_timeout

--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.1.14 (unreleased)
+* Version 3.1.14 (released 2013-08-31)
 
 ** libgnutls: Fixes when session tickets and session DB are used.
 Report and initial patch by Stefan Buehler.
@@ -13,7 +13,7 @@ Report and initial patch by Stefan Buehler.
 Alfredo Pironti.
 
 ** API and ABI modifications:
-No changes since last version.
+gnutls_record_set_timeout: Exported
 
 
 * Version 3.1.13 (released 2013-07-12)
