--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,14 @@ Copyright (C) 2000-2012 Free Software Foundation, Inc.
 Copyright (C) 2013 Nikos Mavrogiannopoulos
 See the end for copying conditions.
 
+* Version 3.2.5 (unreleased)
+
+** libgnutls: Documentation and build-time fixes.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.2.4 (released 2013-08-31)
 
 ** libgnutls: Fixes when session tickets and session DB are used.
