--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -262,6 +262,16 @@ with the dynamic linker an old version is actually used.  So you may
 want to check that the version is okay right after program start-up.
 See the function @funcref{gnutls_check_version}.
 
+On the other hand, it is often desirable to support more than one
+versions of the library. In that case you could utilize compile-time 
+feature checks using the the @code{GNUTLS_VERSION_NUMBER} macro. 
+For example, to conditionally add code for GnuTLS 3.2.1 or later, you may use:
+@example
+#if GNUTLS_VERSION_NUMBER >= 0x030201
+ ...
+#endif
+@end example
+
 @node Building the source
 @subsection Building the source
 
