--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ See the end for copying conditions.
 
 ** libgnutls: Documentation and build-time fixes.
 
+** libgnutls: Allow the generation of DH groups of less than 700 bits.
+
 ** API and ABI modifications:
 No changes since last version.
 
