--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,8 @@ See the end for copying conditions.
 
 ** libgnutls: Allow the generation of DH groups of less than 700 bits.
 
+** srptool: Fixed index command line option. Patch by Attila Molnar.
+
 ** gnutls-cli: Added support for inline commands, using the
 --inline-commands-prefix and --inline-commands options. Patch by Raj Raman.	
 
