--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,9 @@ See the end for copying conditions.
 
 ** srptool: Fixed index command line option. Patch by Attila Molnar.
 
+** certtool: pathlen constraint is now read correctly. Reported by
+Christoph Seitz.
+
 ** API and ABI modifications:
 dane_verify_crt_raw: Added
 dane_raw_tlsa: Added
