--- a/NEWS
+++ b/NEWS
@@ -7,7 +7,8 @@ See the end for copying conditions.
 
 ** libgnutls: Support for TPM via trousers is now enabled by default.
 
-** libgnutls: Camellia in GCM mode has been added in default priorities.
+** libgnutls: Camellia in GCM mode has been added in default priorities, and
+GCM mode is prioritized over CBC in all of the default priority strings.
 
 ** libgnutls: Added ciphersuite GNUTLS_ECDHE_RSA_AES_256_CBC_SHA384.
 
