--- a/doc/cha-upgrade.texi
+++ b/doc/cha-upgrade.texi
@@ -41,7 +41,7 @@ as described in @ref{Asynchronous operation}
 They are replaced by the safer function @funcref{gnutls_session_get_random}
 
 @item @funcintref{gnutls_session_get_master_secret} 
-@tab Replaced by the keying material exporters discussed in @ref{Keying Material Exporters}
+@tab Replaced by the keying material exporters discussed in @ref{Deriving keys for other applications/protocols}
 
 @item @funcintref{gnutls_transport_set_global_errno}
 @tab Replaced by using the system's errno fascility or @funcref{gnutls_transport_set_errno}.
