--- a/doc/cha-gtls-examples.texi
+++ b/doc/cha-gtls-examples.texi
@@ -41,7 +41,7 @@ implemented by another example.
 
 @node Simple client example with X.509 certificate support
 @subsection Simple client example with @acronym{X.509} certificate support
-@anchor{ex:verify}
+@anchor{ex-verify}
 
 Let's assume now that we want to create a TCP client which
 communicates with servers that use @acronym{X.509} or
@@ -111,7 +111,7 @@ certificate selection callback.
 
 @node Verifying a certificate
 @subsection Verifying a certificate
-@anchor{ex:verify2}
+@anchor{ex-verify2}
 
 An example is listed below which uses the high level verification
 functions to verify a given certificate list.
@@ -120,7 +120,7 @@ functions to verify a given certificate list.
 
 @node Client using a smart card with TLS
 @subsection Using a smart card with TLS
-@anchor{ex:pkcs11-client}
+@anchor{ex-pkcs11-client}
 @cindex Smart card example
 
 This example will demonstrate how to load keys and certificates
@@ -132,7 +132,7 @@ use it in a TLS connection.
 
 @node Client with Resume capability example
 @subsection Client with resume capability example
-@anchor{ex:resume-client}
+@anchor{ex-resume-client}
 
 This is a modification of the simple client example. Here we
 demonstrate the use of session resumption. The client tries to connect
@@ -266,7 +266,7 @@ current session.
 
 @node X.509 certificate parsing example
 @subsection @acronym{X.509} certificate parsing example
-@anchor{ex:x509-info}
+@anchor{ex-x509-info}
 
 To demonstrate the @acronym{X.509} parsing capabilities an example program is
 listed below.  That program reads the peer's certificate, and prints
