--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,15 @@ Copyright (C) 2000-2012 Free Software Foundation, Inc.
 Copyright (C) 2013 Nikos Mavrogiannopoulos
 See the end for copying conditions.
 
+* Version 3.2.7 (unreleased)
+
+** certtool: When exporting an encrypted PEM private key do not output the key
+parameters.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.2.6 (released 2013-10-31)
 
 ** libgnutls: Support for TPM via trousers is now enabled by default.
