--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ See the end for copying conditions.
 ** certtool: When exporting an encrypted PEM private key do not output the key
 parameters.
 
+** libgnutls: Added support for ISO OID for RSA-SHA1 signatures.
+
 ** API and ABI modifications:
 No changes since last version.
 
