--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,10 @@ PKCS #11 URL with a certificate, will attempt to load the whole chain.
 ** libgnutls: When traversing PKCS #11 tokens looking for an object, avoid
 looking in unrelated to the object tokens.
 
+** libgnutls: Added %DUMBFW option for priority strings. This avoids a black
+hole behavior in some firewalls by sending a large client hello. See
+http://www.ietf.org/mail-archive/web/tls/current/msg10423.html
+
 ** certtool: When exporting an encrypted PEM private key do not output the key
 parameters.
 
