--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -1029,6 +1029,11 @@ problematic clients and servers is achieved. More specifically this
 string would disable TLS record random padding and tolerate packets
 over the maximum allowed TLS record.
 
+@item %DUMBFW @tab
+will add a private extension with bogus data that make the client
+hello exceed 512 bytes. This avoids a black hole behavior in some
+firewalls.
+
 @item %NO_EXTENSIONS @tab
 will prevent the sending of any TLS extensions in client side. Note
 that TLS 1.2 requires extensions to be used, as well as safe
