--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,9 @@ looking in unrelated to the object tokens.
 hole behavior in some firewalls by sending a large client hello. See
 http://www.ietf.org/mail-archive/web/tls/current/msg10423.html
 
+** libgnutls: The GNUTLS_DEBUG_LEVEL variable if set to a log level number
+will force output of debug messages to stderr.
+
 ** gnutls-serv: Fixed issue with IPv6 address in UDP mode.
 
 ** certtool: When exporting an encrypted PEM private key do not output the key
